# darknet

./: .gitignore  .gitignore.orig  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  DarknetConfig.cmake.in  Dockerfile.cpu  Dockerfile.gpu  Makefile  Makefile_to_CPU.sh  NAOS_batch_run.ps1  NAOS_compute_backup_mAP.ps1  NAOS_compute_results.ps1  NAOS_start_train_multiple.ps1  NAOS_start_training.ps1  README.md  SQLE_README.md  appveyor.yml  bad.list  bridge_traffic_detect.py  build.ps1  build.sh  cscope.files  darknet  darknet.py  darknet2coco.py  darknet_classifier_ap.py  darknet_classifier_map.py  darknet_classify.py  darknet_detector_map.py  darknet_images.py  darknet_video.py  darknot.py  detect.py  detector  drone.data  dump_csv.py  estimate_distance.py  image_yolov2.sh  image_yolov4-tiny.sh  (+21 more)
.github/workflows/: ccpp.yml  on_pr.yml  on_push.yml
bdd100k_sample/: 00a0f008-3c67908e.json
cfg/: coco_dongwei.data  mine.data  multi-output-classifier.cfg  synthetic.data  tiny-yolo.cfg  voc_defeat.data  yolo-pothole-train.cfg  yolov3-drone.cfg  yolov3-mine.cfg  yolov3-spp-pothole-test.cfg  yolov3-spp-pothole-train.cfg  yolov3-synthetic.cfg  yolov3-tiny_pjcrop.cfg  yolov4-ReMPASI.cfg  yolov4-attention.cfg  yolov4.cfg
cmake/: darknetInstall.cmake  darknetLinkLibraries.cmake  darknetOptions.cmake
cmake/Modules/: FindCUDNN.cmake
cpp_src/: .gitignore  CMakeLists.txt
cpp_src/layer/: activation.cpp  activation.hpp  convolutional.cpp  convolutional.hpp  layer.cpp  layer.hpp
cpp_src/network/: network.cpp  network.hpp  network_state.cpp  network_state.hpp
cpp_src/ops/: activation.hpp  tensor.hpp
cpp_src/tensor/: allocator.hpp  cpu_allocator.cpp  cpu_allocator.hpp  gpu_allocator.cpp  gpu_allocator.hpp  tensor.cpp  tensor.hpp  tensor_base.hpp  tensor_cpu.hpp  tensor_gpu.hpp  tensor_shape.hpp
cpp_src/test/: tests.cpp
cpp_src/types/: cuda.hpp  enum.cpp  enum.hpp  image.cpp  image.hpp
cpp_src/utils/: memory.hpp  template.hpp
cuda/: network_kernels.cu
cuda/layers/: activation_kernels.cu  avgpool_layer_kernels.cu  col2im_kernels.cu  convolutional_kernels.cu  crop_layer_kernels.cu  deconvolutional_kernels.cu  dropout_layer_kernels.cu  im2col_kernels.cu  maxpool_layer_kernels.cu
cuda/utils/: blas_kernels.cu
custom_data/: custom_object_darknet.ipynb  custom_object_darknet.py  train.txt
data/: coco.names  list_synthetic_test_images.txt  list_synthetic_training_images.txt  obj_ReMPASI.data  obj_ReMPASI.names  train.txt  voc_defeat.names
data/Pothole/: test.txt  test_custom.txt  train.txt  train_custom.txt
docker/: Dockerfile  run.sh
examples/: darknet.c  detector.c
gun/: darknet_video.py  gun.data
gun2/: gun.data  test.names  test.txt  test_shuf.txt  yolov3_gun.cfg
include/: darknet.h  demo.h  network.h  yolo_v2_class.hpp
include/applications/: classifier.h
include/image/: realsense-opencv-helpers.hpp
include/images/: http_stream.h  image.h  image_opencv.h
include/layers/: activation_layer.h  activations.h  avgpool_layer.h  batchnorm_layer.h  connected_layer.h  conv_lstm_layer.h  convolutional_layer.h  cost_layer.h  crnn_layer.h  crop_layer.h  deconvolutional_layer.h  detection_layer.h  dropout_layer.h  gaussian_yolo_layer.h  gru_layer.h  layer.h  local_layer.h  lstm_layer.h  maxpool_layer.h  normalization_layer.h  region_layer.h  reorg_layer.h  reorg_old_layer.h  rnn_layer.h  route_layer.h  sam_layer.h  scale_channels_layer.h  shortcut_layer.h  softmax_layer.h  upsample_layer.h  yolo_layer.h
include/utils/: blas.h  darkunistd.h  data.h  gemm.h  option_list.h  utils.h
models/: darknet-face.cfg  darknet-feature-face.cfg  yolo-vision.cfg
scripts/: copy_images.py  deploy-cuda.ps1  deploy-cuda.sh  fddb_label.py  gen_anchors.py  generate_dataset_images_relative_paths.py  kmeansiou.c  setup.ps1  setup.sh  voc_label.py
scripts/docker/: Dockerfile  bash.bashrc  run_docker.sh
src/: 1.txt  activation_kernels.cu  activation_layer.c  art.c  avgpool_layer.c  batchnorm_layer.c  blas.c  blas.h  blas_kernels.cu  box.c  box.c.bak  box.cpp  box.h.bak  captcha.c  cifar.c  classifier.c  coco.c  col2im.c  compare.c  connected_layer.c  conv_lstm_layer.c  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.c.orig  cost_layer.c  crnn_layer.c  crop_layer.c  cuda.c  dark_cuda.c  dark_cuda.h  darknet.c  darknet.rc  data.c  data.c.bak  data.c.orig  data.h  deconvolutional_layer.c  demo.c  demo.h  detection_layer.c  (+82 more)
src/applications/: art.c  captcha.c  cifar.c  classifier.c  coco.c  compare.c  dice.c  go.c  nightmare.c  super.c  swag.c  tag.c  voxel.c  yolo.c
src/images/: http_stream.cpp  image.c  image_opencv.cpp
src/layers/: activation_layer.c  activations.c  avgpool_layer.c  batchnorm_layer.c  box.c  col2im.c  connected_layer.c  conv_lstm_layer.c  convolutional_layer.c  cost_layer.c  crnn_layer.c  crop_layer.c  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  gaussian_yolo_layer.c  gru_layer.c  im2col.c  layer.c  local_layer.c  lstm_layer.c  maxpool_layer.c  normalization_layer.c  region_layer.c  reorg_layer.c  reorg_old_layer.c  rnn.c  rnn_layer.c  rnn_vid.c  route_layer.c  sam_layer.c  scale_channels_layer.c  shortcut_layer.c  softmax_layer.c  upsample_layer.c  yolo_layer.c
src/rdv_GetRealsense/: rdv_GetRealsense.cpp  rdv_GetRealsense.h
src/utils/: blas.c  data.c  gemm.c  getopt.c  gettimeofday.c  list.c  matrix.c  option_list.c  parser.c  tree.c  utils.c  writing.c
weight_perf_dump/: dump_csv.py  para.py  parallelize.py  parallelize_backup.py  plot.conf  plot_map.py  plot_multi_obj.conf  yolov3_gun_3208.pckl  yolov3_gun_4216.pckl
